# axum-yew-web

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  cert.pem  key.pem
docs/: font-awesome-981138bfffbeebdb.css  frontend-38745d1e980461ff.js  frontend-38745d1e980461ff_bg.wasm
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/components/: a.html  header.rs  mod.rs
frontend/src/components/assemblies/: footer.rs  header.rs
frontend/src/components/footer/: bottom.rs  inner_bot.rs  inner_top.rs  mobile_apps_ad.rs  mod.rs
frontend/src/components/header/: button.rs  catalog.rs  logo.rs  mod.rs  search_bar.rs
frontend/src/components/header/actions/: cart.rs  language.rs  mod.rs  notifications.rs  orders.rs  user.rs
frontend/src/components/locales/: footer_loc.rs  mod.rs  sidebar_loc.rs
frontend/src/components/modal_windows/: mod.rs  modal_auth.rs
frontend/src/components/modal_windows/modal_auth/: countries.rs  custom_input.rs  mod.rs  validate_input.rs
frontend/src/components/parts/footer/: inner_bot.rs  inner_top.rs  mod.rs  stores.rs
frontend/src/components/parts/header/: mod.rs
frontend/src/components/parts/header/actions/: basket.rs  language.rs  mod.rs  notifications.rs  orders.rs
frontend/src/components/props/: mod.rs
frontend/src/components/styles/: _vars.css  bootstrap-icons.css  bootstrap.css  rozetka.css  styles.css
frontend/src/components/utils/: client_context.rs  mod.rs
frontend/src/routes/: mod.rs
frontend/src/stores/: language.rs
frontend/src/views/: auth.rs  auth_guard.rs  cabinet.rs  home.rs  mod.rs  modal_auth.rs  not_found.rs  profile.rs
frontend/src/views/layouts/: mod.rs
frontend/src/views/layouts/category_perfume/: catalog_settings.rs  filters.rs  item_page.rs  mod.rs  section.rs
frontend/src/views/layouts/home/: mod.rs
frontend/src/views/layouts/home/content/: mod.rs
frontend/src/views/layouts/home/sidebar/: apps_ads.rs  help_centre.rs  main_auth.rs  main_links.rs  menu_category.rs  mod.rs
frontend/src/views/layouts/main_page/: mod.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_table.rs.bak  m20220101_000001_users_roles.rs  m20240323_143315_userlogs_n_userinfo.rs  m20240324_113306_token.rs  m20240411_062104_update_token_to_user_id_optional.rs  m20240503_120246_goods_category_parfumery.rs  m20240515_090501_customer_view_history.rs  m20240515_144211_wish_list_for_users.rs  m20240517_082924_search_goods.rs  m20240517_090204_perfume_portrait.rs
public/: index.html
scripts/: docker-compose.yaml  nginx.conf  readme.md
scripts/bash/: go_to_prod.sh  (+1 more)
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/database/: category_parfumery.rs  goods_list.rs  guest.rs  guest_history.rs  guest_portrait.rs  mod.rs  parfumery_brand.rs  parfumery_class.rs  parfumery_seasonality.rs  parfumery_volume.rs  prelude.rs  roles.rs  search_goods.rs  sessions.rs  user_history.rs  user_info.rs  user_logs.rs  user_portrait.rs  user_roles.rs  users.rs  wish_list.rs
server/src/routes/: home.rs  mod.rs  profile.rs  unique_session.rs  users.rs  verify_token.rs  wish_list.rs
server/src/routes/categories/: mod.rs  perfume.rs  perfume_id.rs  recomendations.rs
server/src/routes/history/: guest.rs  mod.rs  user.rs
server/src/utils/: app_error.rs  cors.rs  guard.rs  jwt.rs  mod.rs
shared/: Cargo.toml
(+6 files in other folders)
