[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies]

shared = { path = "../shared" }

# serialize/deserialize
serde = { workspace = true }
serde_json = { workspace = true }

# frontend framework
yew = { version = "0.20.0", features=["ssr"] }
yew-router = "0.17"
yew-template = "0.10.0"

# Icons
yew_icons = { version = "0.7.3", features = ["bootstrap"] }

# ergonomic state management for Yew
yewdux = "0.9.3"

# browser logs
gloo = { version = "0.10.0" }

# need wasm-bindgen for JsCast
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }

# email validation
regex = "1.10.2"