[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

shared = { path = "../shared" }

# serialize/deserialize
serde = { workspace = true }
serde_json = { workspace = true }

# async runtime
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }

# Backend framework
axum = { version = "0.6.18", features = ["headers", "macros"] }

# middleware
tower-http = { version = "0.4.3", features = ["full"] }
tower = { version = "0.4.13" }

# allow use to generate logs 
log = "0.4.20"

# allow us to show the generated logs
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# .env reader
dotenvy_macro = { version = "0.15.7" }

# database support
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# dateTimeWithTimeZone
chrono = { version = "0.4.26" }

# hash passwords
bcrypt = { version = "0.15.0" }

# encrypt tokens with JWT
jsonwebtoken = { version = "8.3.0" }

# HTTPS support
rustls = "0.21.7"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }

# Testing BACKEND API
reqwest = { version = "0.11", features = ["json"] }